--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <nav>
         <ul>
           <li><a href="/">홈</a></li>
-          <li><a  href="https://output.jsbin.com/ceziqoj/4/" target="_blank">입양</a></li>
+          <li><a  href="https://ysss2.github.io/-/">입양</a></li>
           <li><a href="/donate">후원</a></li>
           <li><a href="https://jsbin.com/zijotey/" target="_blank">펫 팁</a></li>
         </ul>
