--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <li><a href="/">홈</a></li>
           <li><a  href="https://ysss2.github.io/-/">입양</a></li>
           <li><a href="/donate">후원</a></li>
-          <li><a href="https://jsbin.com/zijotey/" target="_blank">펫 팁</a></li>
+          <li><a href="https://ysss2.github.io/-2/">펫 팁</a></li>
         </ul>
       </nav>
     </header>
